# mlops-zoomcamp-workshop

./: .gitignore  README.md
01-intro/: README.md  duration-prediction.ipynb  homework.ipynb  requirements.txt
02-experiment-tracking/: .gitignore  README.md  duration-prediction.ipynb  launch_ui.sh  mlflow.db  requirements.txt
02-experiment-tracking/homework/: homework.ipynb  hpo.py  register_model.py  train.py
02-experiment-tracking/models/: preprocessor.b
02-experiment-tracking/wandb-homework/: regressor.pkl  sweep.py  train.py  wandb-homework.ipynb
03-workflow-orchestration/: .gitignore  deployment.yaml  requirements.txt
03-workflow-orchestration/3.4/: README.md  orchestrate.py
03-workflow-orchestration/3.5/: README.md  create_gs_bucket_block.py  orchestrate.py  orchestrate_gs.py
03-workflow-orchestration/homework/: Dockerfile  homework.md  orchestrate.py  orchestrate_q4.py  orchestrate_q5.py  register_email_block.py  requirements.txt
04-deployment/: README.md
04-deployment/batch/: README.md  pyproject.toml  ride_duration_prediction-deployment.yaml  ride_duration_prediction_backfill-deployment.yaml
04-deployment/batch/taxi_predictor/: batch_inference_backfill_flow.py  batch_inference_flow.py  model.py  training.py  training_flow.py  training_inference_flow.py  utils.py
04-deployment/homework/: .gitignore  Dockerfile  Pipfile  README.md  homework.md  pyproject.toml  starter.ipynb  starter.py  utils.py
04-deployment/streaming/: README.md  publisher_predictions.py  pyproject.toml  subscriber_predictions.py  taxi-duration_training.py
04-deployment/web-service/: .gitignore  Dockerfile  README.md  pyproject.toml  run_api.sh  test_api.py
04-deployment/web-service-mlflow/: README.md  docker-compose.yml  pyproject.toml  run_api.sh  taxi-duration_training.ipynb
04-deployment/web-service-mlflow/taxi_predictor/: api.py  model.py
04-deployment/web-service/taxi_predictor/: api.py  model.py
05-monitoring/homework/: baseline_model_nyc_taxi_data.ipynb  evidently_metrics_calculation.py  homework.md  pyproject.toml
05-monitoring/taxi_monitoring/: baseline_model_nyc_taxi_data.ipynb  docker-compose.yml  dummy_metrics_calculation.py  evidently_metrics_calculation.py
05-monitoring/taxi_monitoring/config/: grafana_dashboards.yaml
05-monitoring/taxi_monitoring/dashboards/: data_drift.json
06-best-practices/homework/: homework.md  pyproject.toml
06-best-practices/homework/integration-tests/: docker-compose.yaml  integration-test.py  predictions.parquet
06-best-practices/homework/taxi_predictor/: batch.py
06-best-practices/homework/tests/: test_batch.py
