[tool.poetry]
name = "taxi-predictor"
version = "0.1.0"
description = ""
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]
readme = "README.md"
packages = [{include = "taxi_predictor"}]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.4.1"
prefect-gcp = "^0.4.3"
scikit-learn = "1.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
